<resources>
    <string name="app_name">Student Management</string>
    <string name="select">Choice Action</string>
    <string name="Qllop">Class Management</string>
    <string name="QlHS">Student Management</string>
    <string name="Aboutus">About Us</string>
    <string name="LogOut">Log Out</string>
    <string name="ver">Version Beta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">  Input Password...</string>
    <string name="sign_in">Login</string>
    <string name="login_failed">"Login Failed"</string>
    <string name="titleQLL">Class List</string>
    <string name="titleQLHS">Student List</string>
    <string name="user_name">  Input Name User...</string>
    <string name="name_us">Tran Xuan Quy</string>
    <string name="name_project">Student Management Application</string>
    <string name="name_nhom">Team 15</string>
    <string name="name_user2">Pham Phong</string>
    <string name="name_ver">Version Beta</string>
    <string name="themhs">Student Information</string>
    <string name="dsLop">List Class</string>
    <string name="hshs">List Student</string>
    <string name="chitieths">List Detail Student</string>
    <string name="user_std">Input Name Student...</string>
    <string name="code_std">Input Code Student...</string>
    <string name="ngaysinh">Input DoB Student...</string>
    <string name="chitetlop">Edit</string>
    <string name="ma_lop">Input Code Class...</string>
    <string name="ten_lop">Input Name Class...</string>
    <string name="giaovien">Input Name Teacher...</string>
    <string name="themlop">Information Class</string>
    <string name="thongtin">Information Application</string>
    <string name="exit">Exit</string>
    <string name="lang_en">English</string>
    <string name="lang_vi">Vietnamese</string>
    <string name="thoat">Exit</string>
    <string name="AboutUs">AboutUs</string>
</resources>