<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Layout.add_class">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/themlop"
        android:textAllCaps="false"
        android:textColor="@color/whitecolor"
        android:textColorLink="#3F51B5"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edt_ma_lop"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:drawablePadding="20dp"
        android:elevation="5dp"
        android:hint="@string/ma_lop"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/edt_tenlop"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:drawablePadding="20dp"
        android:elevation="5dp"
        android:hint="@string/ten_lop"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/edt_giaovien"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:drawablePadding="20dp"
        android:elevation="5dp"
        android:hint="@string/giaovien"
        android:paddingLeft="15dp" />

</LinearLayout>