<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    android:orientation="vertical"
    tools:context=".Layout.MainActivity">

    <TextView
        android:id="@+id/selectOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/select"
        android:textAllCaps="false"
        android:textColor="@color/whitecolor"
        android:textColorLink="#3F51B5"
        android:textSize="24sp" />


    <LinearLayout
        style="@style/linerOption"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/option"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Class"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/classroom" />

            <TextView
                style="@style/txtOption"
                android:text="@string/Qllop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/option"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Student"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/student" />

            <TextView
                style="@style/txtOption"
                android:text="@string/QlHS" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        style="@style/linerOption"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/option"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Infor"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/aboutus" />

            <TextView
                style="@style/txtOption"
                android:text="@string/Aboutus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/option"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_Logout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/logout" />

            <TextView
                style="@style/txtOption"
                android:text="@string/LogOut" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/text"
        style="@style/txtOption"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:text="@string/ver"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
</LinearLayout>